# cutie-messaging

./: CMakeLists.txt  README.md  cutie-messaging-autostart.desktop  cutie-messaging.desktop  cutie-messaging.pro
debian/: control  cutie-messaging.install
src/: main.cpp  messagestore.cpp  messagestore.h  messaging.cpp  messaging.h  ofonomodem.cpp  ofonomodem.h
src/qml/: SendTo.qml  Thread.qml  main.qml  qml.qrc
translations/: cutie-messaging_fi.ts
